# Logger

./: .gitignore  CMakeLists.txt  README.md  test.cpp
Logger/include/common/: MessageQueue.h
Logger/include/core/: Logger.h
Logger/src/: main.cpp
a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
backup.cmake/: CMakeLists.txt
cmake/: LoggerConfig.cmake  LoggerFindPackage.cmake  ide.cmake
example/: CMakeLists.txt  main.cpp
include/Logger/core/: Logger.h
include/Logger/utility/: Levels.h  colors.h  common.h
